fixed navbar spacing

--- a/public/assets/css/create-post.css
+++ b/public/assets/css/create-post.css
@@ -5,7 +5,7 @@ body {
 
 .create-post {
     width: 70%;
-    margin: 70px auto;
+    margin: 50px auto;
     border: thin solid rgba(192, 192, 192, 0.685);
     min-height: 200px;
     border-radius: 5px;
@@ -13,15 +13,11 @@ body {
     box-shadow: 0 0 20px rgba(12, 75, 234, 0.592);
 }
 
-.nav-item {
-   display: flex;
+
+.post-nav-item {
+     display: flex;
    justify-content: space-around;
    width: 50%;
-}
-
-.nav-link {
-    width: 100%;
-    font-weight: bold;
 }
 
 #editor {
